# dler_convetor

./: .gitignore  CLEANUP_SUMMARY.md  CLI_SUMMARY.md  CLI_USAGE.md  COMPARISON_REPORT.md  CONVERTER_COMPARISON.md  FINAL_STATUS.md  INI_PARSER_FIX_SUMMARY.md  PRE_RELEASE_CHECKLIST.md  PROJECT_SUMMARY.md  README.md  RELEASE_GUIDE.md  RELEASE_v0.1.0.md  URL_ONLY_GUIDE.md  clash_generator.py  cli.py  dler_api_client.py  example_usage.py  main.py  publish.sh  pyproject.toml  sub_converter.py  subscription_converter.py
docs/: CLI_QUICKREF.md  FINAL_REPORT.md  INI_SUPPORT_SUMMARY.md  RULES_FORMAT_GUIDE.md  USAGE.md
tests/: test_unsupported_rules.py
